<resources>
    <string name="app_name">Party Games</string>
    <string name="login_create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
</resources>
